  |              would make clients incompatible with previous clients or
  |              proxies will be a accompanied by 'client contest' change.
  `------------- Denotes a client rewrite.

Note: #xxxx refers to bug numbers as viewable on http://bugs.distributed.net/

==========================================================================
Version change log: $Id: CHANGES.txt,v 1.65 2009/05/20 18:17:02 stream Exp $
==========================================================================

2.9100
------
2.9105-511  fix: ppc: Fixed scalar and hybrid OGR-NG cores (#4187)
            imp: cellbe: detect linux kernel SPU scheduler (spufs) bugs

2.9104-510  imp: all: handle lack of a supported cpu/gpu more gracefully
            imp: gpgpu: terminate on unsupported driver/library installations
            imp: gpgpu: raise rc5-72 buffer limit to 10000
            new: cuda: switch to CUDA 2.1 (Linux and Windows only)
            new: cuda: bundle runtime library (libcudart.so.2/libcudart.dylib/
                       cudart.dll) with the released client
            imp: cuda: log errors to logfile (if enabled)
            new: x86: three OGR-NG SSE2 ASM cores from Craig Johnston (#4177)
	    imp: cellbe: faster OGR-NG SPU ASM core

2.9103-509  *** minimal version that supports OGR-27 and beyond ***
            new: rc5-72: support for requesting larger packets (#3918)
            new: stream: RC5-72 core for ATI Stream video cards (#4099)
            imp: x86: Intel Atom (#4080)
            imp: x86: Pentium III detection (#4121)
            imp: x86: Intel Core i7 detection (#4118)
            fix: x86: Various AMD CPU Detections (#4074 & #4120)
            fix: all: Fix OGR-NG middle mark limit miscalculation on odd rulers 
            fix: all: OGR-NG state restored properly after a restart
            fix: linux: Improved OGR-NG cache management (#4076)
            imp: all: Print combined OGR-NG stubs with more details (#4082)